# RED_CORE

./: .claude_code  .env.example  .gitignore  .pre-commit-config.yaml  GRD-C37S-SYS01-USR01-2025-06-03-0304-530F2D_scored.json  GRD-G15P-SYS01-USR01-2025-06-03-0304-01E5D2_scored.json  GRD-GPT4O-SYS01-USR01-2025-06-03-0304-4C176F_scored.json  Makefile  README.md  README.txt  RED CORE Hack a Prompt 2.0 Agent challenge.xlsx  SETUP.md  TODO.md  TODOS.md  config.py  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  friction_audit.py  pre-commit-config.yaml  pyproject.toml  requirements.txt  review_assistant.py  run_refusal_experiments.sh  summarize_alignment.py  sys.py  test_chain.yaml
app/: CLAUDE.md  README.md
app/analysis/: CLAUDE.md  README.md  analysis_cli.py  analyze.py  automated_scorer.py  batch_exporter.py  compliance_reporter.py  dual_evaluator.py  enhanced_review_tool.py  flattener.py  (+6 more)
cache/: viz_cache.pkl
core/: README.md
data/: Claude.md  README.md  model_registry.md
data_tools/: roller.py
dev_log/: README.md
docs/: Dear 80K.rtf  README.md
experiments/: CLAUDE.md  README.md
frank_quarantine/: frank-13b.gguf  frank_cli.py  frank_runner.py
meta/: README.md  README.txt  friction_audit.py
personas/: malicious_actor.yaml
runners/: README.md  anthropic_runner.py  google_runner.py  llama_cpp_runner.py  local_runner.py  multi_system_batch_runner.py  run_exploit_yaml.py  runner_factory.py
safety/: README.md
scripts/: export_per_turn_drift.py
tests/: __init__.py  test_anthropic_runner.py  test_async_race_conditions.py  test_attack_sophistication_claims.py  test_batch_id_generation.py  test_containment_evasion.py  test_conversation_format_claims.py  test_conversation_history_claims.py  test_conversation_state_claims.py  test_error_handling_sophistication.py  test_experiment_runner_async.py  test_llm_evaluation_reliability.py  test_openai_runner.py  test_progress_display_async.py  test_rate_limiting_claims.py  test_safety_containment_claims.py  test_severity_classification_claims.py  test_token_counting_accuracy.py  test_unicode_homoglyph_claims.py
tools/: containment.py  hook_block_file_io.py  hook_check_experiment_readmes.py  new_experiment.py
unused/: diff_logs v0.py  diff_logs.py  interactive_runner.py
utils/: README.md
visuals/: code (1).ipynb  download_nltk_data.py  interactive_drift_dashboard.txt
well_digger_logs/: friction_audit_log.csv
(+702 files in other folders)
