[tool.poetry]
name = "red-core"
version = "0.1.0"
description = ""
authors = ["Cassius-Oldenburg <connect@cassius.red>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
new-experiment = "tools.new_experiment:main"
