[tool.poetry]
name = "red-core"
version = "0.1.0"
description = ""
authors = ["Cassius-Oldenburg <connect@cassius.red>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pyyaml = "^6.0.2"
python-dotenv = "^1.1.0"
pydantic = "^2.11.5"
tiktoken = "^0.9.0"
pylance = "^0.28.0"
openai = "^1.82.0"
anthropic = "^0.52.0"
google-generativeai = "^0.8.5"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
new-experiment = "tools.new_experiment:main"
